k8s-deployment/postgres-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s-deployment
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-keycloak
  name: postgres-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s-deployment
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mxms-devsandbox-your-network: "true"
        io.kompose.service: postgres-keycloak
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloak
            - name: POSTGRES_PASSWORD
              value: changeMe
            - name: POSTGRES_USER
              value: keycloak
          image: postgres:15
          livenessProbe:
            exec:
              command:
                - pg_isready -U keycloak
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: postgres-keycloak
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-db-data
      restartPolicy: Always
      volumes:
        - name: keycloak-db-data
          persistentVolumeClaim:
            claimName: keycloak-db-data
status: {}
