k8s-deployment/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s-deployment
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s-deployment
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mxms-devsandbox-your-network: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: ES_URL
              value: http://elasticsearch:9200
            - name: MONGO_DATABASE_URL
              value: mongodb:27017
            - name: MXS_BASE_URI
              value: https://localhost:8443
            - name: MXS_ENV
              value: container
            - name: MXS_OAUTH_ID
              value: maximus
            - name: MXS_OAUTH_SECRET
              value: jJjVjNLQJ9r3dTc64rt2cFwenmEeusaY
            - name: NODE_EXTRA_CA_CERTS
              value: /etc/ssl/certs/localhost.crt
            - name: POSTGRES_CONNECTION_URL
              value: postgres://maximus:magic@postgres:5432/maximus
          image: server
          name: server
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: server-claim0
            - mountPath: /data/node_modules
              name: server-claim1
            - mountPath: /etc/ssl/certs/localhost.crt
              name: server-claim2
      restartPolicy: Always
      volumes:
        - name: server-claim0
          persistentVolumeClaim:
            claimName: server-claim0
        - name: server-claim1
          persistentVolumeClaim:
            claimName: server-claim1
        - name: server-claim2
          persistentVolumeClaim:
            claimName: server-claim2
status: {}
