k8s-deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s-deployment
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "8443"
      port: 8443
      targetPort: 443
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
